1.3.0  TBD

   - Renamed non-interactive flags from -i to -y

1.2.4  2025-12-07

   - Updated completion scripts for new sbozyp options

1.2.3  2025-12-04

   - Finally ready for a stable release!
   - Removed SlackBuild from CPAN dist
   - Install command default now does not install recursively
   - Added '-c' query option to print repo path
   - Documentation upgrades

0.8.0  2025-10-30

   - Remove $HOME/.sbozyp.conf configuration file
   - Make repo sync output more verbose

0.7.1  2025-10-29

   - Minor performance optimization
   
0.7.0  2025-10-29

   - Query option '-b' outputs trailing /
   - Various performance optimizations

0.6.3  2025-10-24

   - Minor change in printed PKGNAME's not being single quoted

0.6.2  2025-10-24

   - Added to remove command a default safety check preventing
     removal of packages with dependents
   - Added '-r' remove flag to remove package dependencies that
     are safe to remove
   - Added '-b' query flag to print path to packages local dir
   - Overhauled the UI, removing features to make it much simpler

0.5.1  2025-09-03

   - Added -m query flag to print all packages with no parents
   - Various performance improvements

0.5.0  2025-08-28

   - Added -o and -n query flags to print a packages dependents
   - The -p query flag no longer causes exit if pkg not installed

0.4.2  2025-08-22

   - Documentation upgrades

0.4.1  2025-08-22

   - Ignore non-existent package dependencies (issue #17)

0.4.0  2025-08-22

   - Use git '--single-branch' opt when cloning SBo repo
   - Add global '-T' flag to do nothing if SBo repo hasn't been cloned
   - Update shell completion to not perform repo cloning (via -T option)
   - Documentation upgrades

0.3.2  2025-08-21

   - Added build command
   - Added '-k' option to the install command to keep built package
   - Removed CLEANUP configuration file option
   - Added '-p' option to search command to print just package PRGNAMs
   - Added shell completion for bash and zsh