@@ -121,7 +121,7 @@ _sbozyp_complete() {
             fi
             ;;
         search|se)
-            local opts="--help -c -n -p"
+            local opts="--help -c -n -p -q"
             if [[ $cur == se ]]; then
                 COMPREPLY=( "search" )
             else
