@@ -1,6 +1,7 @@
 1.3.0  TBD
 
    - Renamed non-interactive flags from -i to -y
+   - More consistent exit status
 
 1.2.4  2025-12-07
 
